Preparing to migrate ratings system to backend, slight security fix

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -8,11 +8,13 @@
 <script src="/__/firebase/5.4.0/firebase-app.js"></script>
 <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
 <script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+<script src="/__/firebase/5.4.0/firebase-functions.js"></script>
 <script src="/__/firebase/init.js"></script>
 <!-- FIREBASE -->
 
 <script src="scripts/jquery.min.js"></script>
 <script src="scripts/user_profile.js"></script>
+
 <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 <link rel="stylesheet" href="styles/main.css">
 <link rel="stylesheet" href="styles/navigation.css">
